# stablecoin_payment_system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
docs/: api_spec.yaml  architecture.md  runbook.md
onchain/programs/anchor_stablecoin/: Cargo.toml
onchain/programs/anchor_stablecoin/src/: events.rs  lib.rs
onchain/programs/anchor_stablecoin/src/instructions/: admin.rs  initialize.rs  mod.rs
onchain/programs/shared_memory/: Cargo.toml
onchain/programs/shared_memory/src/: error.rs  instructions.rs  lib.rs  state.rs
orchestrator/: Cargo.toml  build.rs
orchestrator/src/: lib.rs  main.rs
orchestrator/src/api/http/: mod.rs  server.rs
orchestrator/src/api/http/dto/: request.rs  response.rs
orchestrator/src/api/http/handlers/: burn.rs  mint.rs  transfer.rs  webhook.rs
orchestrator/src/api/http/middleware/: logging.rs  rate_limiter.rs  request_id.rs
orchestrator/src/api/websocket/: mod.rs
orchestrator/src/application/: burn_service.rs  mint_service.rs  mod.rs  transfer_service.rs  webhook_dispatcher.rs
orchestrator/src/config/: mod.rs  settings.rs  solana_config.rs
orchestrator/src/domain/: error.rs  idempotency_key.rs  mod.rs  payment.rs  webhook_event.rs
orchestrator/src/infrastructure/: mod.rs
orchestrator/src/infrastructure/cache/: redis.rs
orchestrator/src/infrastructure/db/: postgres.rs
orchestrator/src/infrastructure/kms/: aws_client.rs  mod.rs
orchestrator/src/infrastructure/metrics/: prometheus.rs
orchestrator/src/infrastructure/queue/: kafka_producer.rs
orchestrator/src/infrastructure/solana/: client.rs  jito_bundle.rs  mod.rs  rpc_ext.rs  tpu_client.rs  transaction_builder.rs
orchestrator/src/infrastructure/webhook/: mod.rs  sender.rs  signature.rs
orchestrator/src/jobs/: mod.rs  transaction_confirmation_poller.rs  webhook_retry_worker.rs
orchestrator/tests/e2e/: localnet.rs
orchestrator/tests/integration/: idempotency_test.rs  mint_api_test.rs  webhook_test.rs
(+46 files in other folders)
