[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.6", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }
solana-client = "1.16"
solana-sdk = "1.16"
solana-transaction-status = "1.16"
rdkafka = { version = "0.36", features = ["cmake-build"] }
aws-config = "0.56"
aws-sdk-kms = "0.56"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
shared-memory = { path = "../onchain/programs/shared_memory" }
