[package]
name = "shared-memory"
version = "0.1.0"
edition = "2021"

[features]
anchor-bridge = ["anchor-lang"]
native-bridge = []

[dependencies]
solana-program = "1.16"
bytemuck = { version = "1.13", features = ["derive"] }
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
anchor-lang = { version = "0.28.0", optional = true }
